# trash

./: .gitignore  Ex1.10.rkt  Ex1.2.rkt  Ex1.3.rkt  Ex1.4.rkt  Ex1.5.rkt  Ex1.6.rkt  Ex1.7.rkt  Ex1.8.1.rkt  Ex1.8.rkt  Ex1.9.rkt  HierachicalDataandClosureProperty.rkt  README.md  arith.alg  big  dataAbstraction.rkt  demo.rkt  extensions  hore-logic.alg  little_schemer_practice.rkt  procedureAbstraction.rkt  report  schemer.rkt  sicp-chapter-1.rkt  sicp_notes_c1.rkt  sig  sqlal.py  summary
compiler/haskell/: haskell.cabal
compiler/haskell/src/: ClosureConversion.hs  HigherOrderCPS.hs  HybridCPS.hs  LCConvert.hs  NaiveCPS.hs  PartitionedCPS.hs
cpp/: 1  2  :w  ;  CMakeLists.txt  PopList #162  PopList #401  README.md  a.cc  b.cc  b.s  compile_commands.json  popexceptionsafe.cpp  report
cpp/.clangd/index/: demo.cc.0E37CE3A5669EA2E.idx  demo.cc.1F1D9443CC3502BA.idx  demo.cc.2623852B9F803587.idx  demo.cc.2BC1BDCACEE0F109.idx  demo.cc.33866A1A0A68C23B.idx  demo.cc.478179768FE529BC.idx  demo.cc.622932BC0B6B6188.idx  demo.cc.68AC4197F79D1ADF.idx  demo.cc.73C5EEA313766D34.idx  demo.cc.BB54F28274FA3DE9.idx  demo.cc.F0F479CCEA8CE155.idx
cpp/A-tour-to-cpp/: atourtocpp.cc  concepts.cc  tpmergesort.cc
cpp/accelerate-cpp/Map/: grammar.cpp  map.cpp
cpp/accelerate-cpp/Templates/: iostream_iter.cpp  iter_split.cpp  iterator_categories.cpp  median.cpp
cpp/allocator/: CMakeLists.txt  allocatortraits.cc  capture address.cpp  default.cc  demo.cc  minimal_allocator.cc  placement_new.cc  pmr.cc  short_alloc.cc  to_address.cc  uninitialized_relocate.cc
cpp/boost/: regex1.cc
cpp/c/: abc.txt  fib.c
cpp/c/link/: abs.c  (+4 more)
cpp/class/: .gdb_history  CMakeLists.txt  ctors_traits.cc  demo.cc  json_heirachy.cc  member_pointer.cc  move.cc  move_wrapper.cc  named_arg.cc  object_model.cc  object_model1.cc  object_model2.cc  override_super_field.cc  size_if_empty_class_is_1.cc  size_of_empty_class_is_1.cc  tfam.cc  type_eraure.cc
cpp/compiler/: common.h  fvisibility.cc  fvisibility.h  main.cc
cpp/compiles_to/: .env
cpp/concept/: CMakeLists.txt  concepts.cc  concepts1.cc  constrain_fuction.cc  demo.cc
cpp/concurrent/: CMakeLists.txt  README.md  asmlock.cc  atomic.cc  compare_and_swap.cc  false_sharing.cc  future.cc  lockfree_stack.cc  locking_cv.cc  out.asm  protect_shared_data.cc  thread.cc
cpp/constexpr/: CMakeLists.txt  brainfuck.cc  brainfuck.s
cpp/cpp20/: CMakeLists.txt  ranges.cc
cpp/dsl/: lambda.h
cpp/exception/: CMakeLists.txt
cpp/gdb/: gdb.text
cpp/inlineasm/: t1.cc
cpp/lambda/: .gdb_history  CMakeLists.txt  a  compose.cc  demo.cc  note.cc  pass_functions.cc  pass_functions.s  stdfunction_and_lambda.cc
cpp/langauge-lawyer/: CMakeLists.txt  explicitly-call-destructor.cc  main.cc  union-with-deleted-default-constructor-and-destructor.cc
cpp/legacy/: README.md  atourtocpp.cc  tp.cc  tpmergesort.cc  uref.cc
cpp/lifetime/: CMakeLists.txt  ctors_all_in_one.cc  dangling_reference.cc  default_ctors.cc  life_involve_with_containers.cc  lifetime1.cc  lifetime10_rvo_andnrvo.cc  lifetime11_structured_binding.cc  lifetime12_destructor_in_trycatch.cc  lifetime2_what_is_an_object.cc  lifetime3_reference_type_is_not_object.cc  lifetime4_dangling_reference.cc  lifetime5_destructor_of_moved_from_obj.cc  lifetime6_lifetime_extension_apply_recursively_to_memer_initialization.cc  lifetime7_initializer_list.cc  lifetime8_dangling_subobject.cc  lifetime9_move_happen_automatically_with_rvalues.cc  lifetime_of_temporary.cc  shared_fun.cc  temp_to_nonconstref.cc
cpp/locks/: CMakeLists.txt  boundBuffer.cc  concurrent_stack.cc  deadlock.h  demo.cc  monitors.h  queue.h  readerWriter.h  semaphore.h  tooMuchMilk.cc
cpp/misc/: CMakeLists.txt  alignof.cc  composition.cc  composition1.cc  continuation.cc  continuation1.cc  demo.cc  method-chain.cc  overload_visit.cc  trailingfunctype.cc  verify_string_addition_is_copy.cc
cpp/ptr/: .gdb_history  CMakeLists.txt  README.md  casting.cc  demo.cc  deref_obj_onheap_then_copy.cc  dont_store_ref_of_shared_ptr.cc  make_unique_pod.cc  move.cc  noreturn.cc  passunique.cc  perfect_forwarding.cc  ptr_traits.cpp  ref_playground.cc  refs-type-arg.cc  refs.cc  refs2.cc  reinterpret_and_vendor_api.cc  uniqe_and_raw.cc  unique.cc  unique.h  weak_pointer.cc
cpp/quirks/: any_impl.cc  bind_this.cc  controlling_overloading_resolution.cc  destructive_move.cc  lazy_eval_value_or.cc  pass_unique_ptr.cc  reference1.cc  special_mem_fun_guide.cc  tagged_union.cc  template_map.cc  type_erasure1.cc  type_erasure2.cc  value_semantic_any.cc  visitor1.cc  visitor2.cc  visitor3.cc  visitor4.cc
cpp/stl/: CMakeLists.txt  algorithms.cc  algorithms.h  any.cc  binary_search.cc  container_ctors.cc  containers.cc  containers.h  demo.cc  hkt.cc  inilist.cc  instream.cc  map.cc  mem.cc  numerics.cc  optional.cc  queues.cc  reverseiter.cc  set.cc  streams.cc  strview.cc
cpp/template-type-deduction/: typetraits.cc
cpp/tp/: #deductionguide1.cc#  .gdb_history  CMakeLists.txt  a  const_expr.cc  convertable.cc  decay.cc  deductionguide.cc  deductionguide1.cc  deductionguide2.cc  different_types.h  explicit.cc  infer_lambda_type.cc  lambda_trait.h  lang.h  lang_test.cc  metaprogramming1.cc  metaprogramming2.cc  overloadwithdifferenttemplate.cc  partial_application.cc  partial_special.cc  replace.cc  sfinae.cc  sfinae_resolution.cc  specialization.cc  stl_traits.cc  tp.cc  tp1.cc  trait_iterator.cc  traits.cc  type_constraint.cc  type_erasure.cc  typealias-imheritence.cc  varadic_recur.cc  varadic_tp.cc  varadic_unique.cc
cpp/tricks/: limits_value.cc
cpp/typededuction/: CMakeLists.txt  autodecltypereturn.cc  demo.cc  demo1.cc  typetraits.cc
rust/demo/: Cargo.toml
(+1854 files in other folders)
