cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jimmy
maintainer:         jimmy123good@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      ClosureConversion

      CPSTransform.NaiveCPS
      CPSTransform.HigherOrderCPS
      CPSTransform.HybridCPS
      CPSTransform.PartitionedCPS

      TypeChecking.Refinement1
      TypeChecking.Refinement2
      TypeChecking.BidirectionalTC.TC1
      TypeChecking.BidirectionalTC.TC2
      TypeChecking.BidirectionalTC.TC3

      Staging.BTA

      DSL.Sharing

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , unordered-containers
      , containers
      , transformers
      , pretty-simple
      , text
      , bytestring
      , mtl
      , wl-pprint
      , wl-pprint-text
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        haskell

    hs-source-dirs:   app
    default-language: Haskell2010
