[package]
name = "demo"
version = "0.1.0"
authors = ["Jimmy <jimmy123good@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.5.0", features = ["full"]}
regex = "1"
error-chain = "0.12"
memmap = "0.7"
threadpool = "1.8"
crossbeam = "0.8"
rand = "0.8"
lazy_static = "1.4"
bitfield = "0.13"
bitflags = "1.2"
